# 2048-sdl

./: CMakeLists.txt  README.md  build.sh  run.sh  test.sh
src/: board.c  board.h  main.c
tests/: board.c
